--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Learn easy luxembourgish 15.09.2021 19:00"
+      content="Learn easy Luxembourgish 15.09.2021 19:00"
     />
     <!-- Facebook Pixel Code -->
       <script>
@@ -42,7 +42,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Learn easy luxembourgish</title>
+    <title>Learn easy Luxembourgish</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
