--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,17 @@
         src="https://www.facebook.com/tr?id=829017837756217&ev=PageView&noscript=1"
       /></noscript>
     <!-- End Facebook Pixel Code -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3G4GS07X23"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3G4GS07X23');
+    </script>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
